[package]
name = "topology"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

homepage = "https://github.com/gz/rust-topology"
repository = "https://github.com/gz/rust-topology"
documentation = "https://docs.rs/topology"
readme = "README.md"
keywords = ["os", "hwloc", "hwinfo", "topology", "x86-64"]
license = "MIT OR Apache-2.0"

[dependencies]
x86 = "0.21"
log = "0.4"
lazy_static = { version = "1.3", features = ["spin_no_std"] }
acpica-sys = { git = "https://github.com/gz/acpica-sys.git" }
