[package]
name = "atopology"
version = "0.0.32"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
homepage = "https://github.com/gz/rust-topology"
repository = "https://github.com/gz/rust-topology"
documentation = "https://docs.rs/topology"
description = "Query and parse machine topology information from ACPI"
readme = "README.md"
keywords = ["os", "hwloc", "hwinfo", "topology", "x86-64"]
license = "MIT OR Apache-2.0"

[dependencies]
x86 = { version = "0.51", features = ["unstable"] }
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
cstr_core = { version = "0.2.3", default-features = false }
bitflags = "1.2.1"
static_assertions = "1.1.0"

[target.'cfg(target_os = "none")'.dependencies]
libacpica = "0.0.8"

[target.'cfg(not(target_os = "none"))'.dependencies]
env_logger = "0.9"
procfs = { version = "0.13", default-features = false }
